--- a/.github/workflows/release-email.yml
+++ b/.github/workflows/release-email.yml
@@ -28,4 +28,4 @@ jobs:
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           EMAIL_RECEIVERS: ${{ secrets.EMAIL_RECEIVERS }}
         run: |
-          python send_email.py
+          python release_email.py
